test/testdata/classes/methods/this_inside_function_error.lox.lox
fun printThis() {
  print this; // error: 'this' can only be used inside a method definition
}
